plugins/groovy/PlanScript: Fix Java9+ deprecation for new Double.